@@ -14,6 +14,8 @@ Feature
 Feature
 	New NSEC typemap() instance method interrogates type list.
 
+	IO::Socket::INET6 removed from recommended module metadata.
+	IPv6 requires IO::Socket::IP which is now a core package.
 
 **** 1.15 Feb 9, 2018
 
